--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A presentation made with Reveal.js to demonostrate writing native Node.js addons in C++.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-lessons": "npm run build-lesson-1 && npm run build-lesson-2 && npm run build-lesson-3",
+    "build-lesson-1": "cd examples/lesson01-hello-world && node-gyp configure && node-gyp build",
+    "build-lesson-2": "cd examples/lesson02-argument-passing && node-gyp configure && node-gyp build",
+    "build-lesson-3": "cd examples/lesson03-callbacks && node-gyp configure && node-gyp build"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,8 @@
   "homepage": "https://github.com/qheaden/2016-building-native-addons-for-nodejs#readme",
   "dependencies": {
     "reveal.js": "^3.8.0"
+  },
+  "devDependencies": {
+    "node-gyp": "^5.0.3"
   }
 }
